test/fail/bad-import.mo
import C "lib/actor"; // bad actor import

actor {
};